<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingVertical="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:background="@drawable/round_bg"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_bg"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/zealId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_bg"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/zealId"
            android:inputType="number"
            android:lines="1"
            android:maxLength="4"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_bg"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>